--- a/flask_login_tutorial/templates/dashboard.jinja2
+++ b/flask_login_tutorial/templates/dashboard.jinja2
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout.jinja2" %}
 
 {% block pagestyles %}
   <link href="{{ url_for('static', filename='dist/css/dashboard.css') }}" rel="stylesheet" type="text/css">
@@ -9,7 +9,8 @@
     <h1>{{body}}</h1>
 
     {% if current_user.is_authenticated %}
-    <p>Hi {{ current_user.name }}!</p>
-    <a href="{{ url_for('auth_bp.logout_page') }}">Log out</a>
-  {% endif %}
+        <p>Hi {{ current_user.name }}!</p>
+        <a href="{{ url_for('auth_bp.logout') }}">Log out</a>
+    {% endif %}
+
 {% endblock %}
