--- a/flask_login_tutorial/static/src/less/account.less
+++ b/flask_login_tutorial/static/src/less/account.less
@@ -94,7 +94,6 @@
 
     input[type="submit"] {
       background: @theme-color;
-      border: 0;
       color: white;
       border-radius: 2px;
       margin-top: 15px;
@@ -147,6 +146,8 @@
         color: #856404;
         font-weight: 300;
         order: 1;
+        outline: none !important;
+        transition: @transition;
       }
     }
 
