--- a/flask_login_tutorial/static/src/less/dashboard.less
+++ b/flask_login_tutorial/static/src/less/dashboard.less
@@ -23,6 +23,7 @@ body {
       font-family: 'agenda', sans-serif;
       font-weight: 600;
       text-shadow: -1px 1px 0 #3e798d;
+      line-height: 1;
     }
 
     p {
@@ -33,7 +34,7 @@ body {
 
     a {
       font-size: 1em;
-      font-weight: 200;
+      font-weight: 500;
       text-decoration: underline;
       margin-top: 50px;
       display: block;
