--- a/flask_login_tutorial/templates/signup.jinja2
+++ b/flask_login_tutorial/templates/signup.jinja2
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout.jinja2" %}
 
 {% block pagestyles %}
     <link href="{{ url_for('static', filename='dist/css/account.css') }}" rel="stylesheet" type="text/css">
@@ -7,17 +7,21 @@
 {% block content %}
   <div class="formwrapper">
     <form method=post>
+
       <div class="logo">
         <img src="{{ url_for('static', filename='dist/img/logo.png') }}">
       </div>
+
       {% for message in get_flashed_messages() %}
         <div class="alert alert-warning">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
             {{ message }}
         </div>
       {% endfor %}
+
       <h1>Sign Up</h1>
-      <div class="name">
+
+      <fieldset class="name">
         {{ form.name.label }}
         {{ form.name(placeholder='John Smith') }}
         {% if form.name.errors %}
@@ -25,8 +29,9 @@
             {% for error in form.email.errors %}<li>{{ error }}</li>{% endfor %}
           </ul>
         {% endif %}
-      </div>
-      <div class="email">
+      </fieldset>
+
+      <fieldset class="email">
         {{ form.email.label }}
         {{ form.email(placeholder='youremail@example.com') }}
         {% if form.email.errors %}
@@ -34,8 +39,9 @@
             {% for error in form.email.errors %}<li>{{ error }}</li>{% endfor %}
           </ul>
         {% endif %}
-      </div>
-      <div class="password">
+      </fieldset>
+
+      <fieldset class="password">
         {{ form.password.label }}
         {{ form.password }}
         {% if form.password.errors %}
@@ -43,8 +49,9 @@
             {% for error in form.password.errors %}<li>{{ error }}</li>{% endfor %}
           </ul>
         {% endif %}
-      </div>
-      <div class="confirm">
+      </fieldset>
+
+      <fieldset class="confirm">
         {{ form.confirm.label }}
         {{ form.confirm }}
         {% if form.confirm.errors %}
@@ -52,17 +59,21 @@
             {% for error in form.confirm.errors %}<li>{{ error }}</li>{% endfor %}
           </ul>
         {% endif %}
-      </div>
-      <div class="website">
+      </fieldset>
+
+      <fieldset class="website">
         {{ form.website.label }}
         {{ form.website(placeholder='http://example.com') }}
-      </div>
+      </fieldset>
+
       <div class="submitbutton">
         <input id="submit" type="submit" value="Submit">
       </div>
+
     </form>
+
     <div class="loginsignup">
-      <span>Already have an account? <a href="{{ url_for('auth_bp.login_page') }}">Log in.</a><span>
+      <span>Already have an account? <a href="{{ url_for('auth_bp.login') }}">Log in.</a><span>
     </div>
   </div>
 {% endblock %}
