--- a/flask_login_tutorial/templates/login.jinja2
+++ b/flask_login_tutorial/templates/login.jinja2
@@ -46,7 +46,7 @@
       </div>
 
       <div class="loginsignup">
-        <span>Don't have an account? <a href="{{ url_for('auth_bp.signup') }}">Sign up.</a><span>
+        <span>Don't have an account? <a href="{{ url_for('auth_bp.signup') }}">Sign up.</a></span>
         </div>
         
     </form>
