--- a/flask_login_tutorial/templates/signup.jinja2
+++ b/flask_login_tutorial/templates/signup.jinja2
@@ -73,7 +73,7 @@
     </form>
 
     <div class="loginsignup">
-      <span>Already have an account? <a href="{{ url_for('auth_bp.login') }}">Log in.</a><span>
+      <span>Already have an account? <a href="{{ url_for('auth_bp.login') }}">Log in.</a></span>
     </div>
   </div>
 {% endblock %}
