--- a/flask_login_tutorial/templates/login.jinja2
+++ b/flask_login_tutorial/templates/login.jinja2
@@ -6,7 +6,7 @@
 
 {% block content %}
   <div class="formwrapper">
-    <form method=post>
+    <form method="POST">
 
       <div class="logo">
         <img src="{{ url_for('static', filename='dist/img/logo.png') }}">
