Refactor jinja templates.

--- a/flask_login_tutorial/static/src/less/account.less
+++ b/flask_login_tutorial/static/src/less/account.less
@@ -4,14 +4,15 @@
 .login-page {
   background: @background-color;
 
-  .formwrapper {
+  .form-wrapper {
     background: white;
-    width: 470px;
+    width: 370px;
+    max-width: 470px;
     margin: 80px auto 0;
     box-shadow: @box-shadow;
     padding: 50px;
 
-    @media(max-width: 600px) {
+    @media (max-width: 600px) {
       width: 100%;
       margin: 15px auto;
       padding: 30px;
@@ -20,12 +21,63 @@
     .logo {
       text-align: center;
       margin: 0 auto 20px;
+
       img {
         width: 30px;
         margin: auto;
 
-        @media(max-width: 600px) {
+        @media (max-width: 600px) {
           width: 25px;
+        }
+      }
+    }
+
+    .alert-warning {
+      color: #856404;
+      background-color: #fff3cd;
+      border-color: #ffeeba;
+      font-weight: 300;
+      font-size: .8em;
+      margin: 30px 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      @media (max-width: 600px) {
+        padding: 10px 15px;
+      }
+
+      .close {
+        color: #856404;
+        font-weight: 300;
+        order: 1;
+        outline: none !important;
+        transition: @transition;
+      }
+    }
+
+    .alert {
+      position: relative;
+      padding: .75rem 1.25rem;
+      margin-bottom: 1rem;
+      border: 1px solid transparent;
+      border-radius: .25rem;
+      font-family: @body-font;
+
+      button.close {
+        padding: 0;
+        background-color: transparent;
+        border: 0;
+        -webkit-appearance: none;
+        float: right;
+        font-size: 1.5rem;
+        font-weight: 700;
+        line-height: 1;
+        color: #000;
+        text-shadow: 0 1px 0 #fff;
+        opacity: .4;
+
+        &:hover {
+          cursor: pointer;
         }
       }
     }
@@ -37,16 +89,18 @@
       border-bottom: 1px solid #dee2ef;
       padding-bottom: 5px;
       margin-bottom: 20px;
+      font-family: @body-font;
 
-      @media(max-width: 600px) {
+      @media (max-width: 600px) {
         font-size: 1.3rem;
       }
     }
 
+
     input {
       padding: 10px 13px;
       margin-bottom: 15px;
-      width: 100%;
+      width: -webkit-fill-available;
       border-radius: 2px;
       border: 1px solid #d4d9e3;
       font-weight: 200;
@@ -56,7 +110,7 @@
       font-size: .9em;
       outline-color: transparent;
       outline-style: none;
-      @media(max-width: 600px){
+      @media (max-width: 600px) {
         font-size: .9em;
       }
 
@@ -84,12 +138,19 @@
       }
     }
 
+    fieldset {
+      border: none;
+      padding: 0;
+      margin: 0;
+    }
+
     label {
       font-size: .9em;
       color: @header-color;
       margin-bottom: 5px;
       display: block;
       font-weight: 300;
+      font-family: @body-font;
     }
 
     input[type="submit"] {
@@ -116,43 +177,18 @@
       font-size: .9em;
       color: #b75353;
     }
+  }
 
-    .loginsignup {
-      text-align: center;
-      font-weight: 300;
-      font-size: 0.8em;
+  .login-signup {
+    text-align: center;
+    font-weight: 300;
+    font-size: 0.8em;
+    font-family: @body-font;
+    margin-top: 20px;
 
-      a {
-        color: @theme-color;
-        font-weight: 500;
-      }
-    }
-
-    .alert-warning {
-      color: #856404;
-      background-color: #fff3cd;
-      border-color: #ffeeba;
-      font-weight: 300;
-      font-size: .8em;
-      margin: 30px 0;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      @media(max-width: 600px) {
-        padding: 10px 15px;
-      }
-
-      .close {
-        color: #856404;
-        font-weight: 300;
-        order: 1;
-        outline: none !important;
-        transition: @transition;
-      }
-    }
-
-    .loginsignup {
-      margin-top: 20px;
+    a {
+      color: @theme-color;
+      font-weight: 500;
     }
   }
 }
