--- a/flask_login_tutorial/templates/login.jinja2
+++ b/flask_login_tutorial/templates/login.jinja2
@@ -1,55 +1,58 @@
 {% extends "layout.jinja2" %}
 
 {% block pagestyles %}
-  <link href="{{ url_for('static', filename='dist/css/account.css') }}" rel="stylesheet" type="text/css">
+    <link href="{{ url_for('static', filename='dist/css/account.css') }}" rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block content %}
-  <div class="formwrapper">
-    <form method="POST" action="/login">
-      {{ form.csrf_token }}
+    <div class="form-wrapper">
 
-      <div class="logo">
-        <img src="{{ url_for('static', filename='dist/img/logo.png') }}">
-      </div>
-
-      {% for message in get_flashed_messages() %}
-        <div class="alert alert-warning">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{ message }}
-        </div>
-      {% endfor %}
-
-      <h1>Log In</h1>
-
-      <fieldset class="email">
-         {{ form.email.label }}
-         {{ form.email(placeholder='youremail@example.com') }}
-         {% if form.email.errors %}
-           <ul class="errors">
-             {% for error in form.email.errors %}<li>{{ error }}</li>{% endfor %}
-           </ul>
-         {% endif %}
-      </fieldset>
-
-      <fieldset class="password">
-        {{ form.password.label }}
-        {{ form.password }}
-        {% if form.email.errors %}
-          <ul class="errors">
-            {% for error in form.password.errors %}<li>{{ error }}</li>{% endfor %}
-          </ul>
-        {% endif %}
-      </fieldset>
-
-      <div class="submitbutton">
-        {{ form.submit }}
-      </div>
-
-      <div class="loginsignup">
-        <span>Don't have an account? <a href="{{ url_for('auth_bp.signup') }}">Sign up.</a></span>
+        <div class="logo">
+            <img src="{{ url_for('static', filename='dist/img/logo.png') }}" alt="logo" />
         </div>
 
-    </form>
-  </div>
+        {% for message in get_flashed_messages() %}
+            <div class="alert alert-warning">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                {{ message }}
+            </div>
+        {% endfor %}
+
+        <h1>Log In</h1>
+
+        <form method="POST" action="/login">
+            {{ form.csrf_token }}
+
+            <fieldset class="email">
+                {{ form.email.label }}
+                {{ form.email(placeholder='youremail@example.com') }}
+                {% if form.email.errors %}
+                    <ul class="errors">
+                        {% for error in form.email.errors %}
+                            <li>{{ error }}</li>{% endfor %}
+                    </ul>
+                {% endif %}
+            </fieldset>
+
+            <fieldset class="password">
+                {{ form.password.label }}
+                {{ form.password }}
+                {% if form.email.errors %}
+                    <ul class="errors">
+                        {% for error in form.password.errors %}
+                            <li>{{ error }}</li>{% endfor %}
+                    </ul>
+                {% endif %}
+            </fieldset>
+
+            <div class="submit-button">
+                {{ form.submit }}
+            </div>
+
+            <div class="login-signup">
+                <span>Don't have an account? <a href="{{ url_for('auth_bp.signup') }}">Sign up.</a></span>
+            </div>
+
+        </form>
+    </div>
 {% endblock %}
