--- a/flask_login_tutorial/templates/signup.jinja2
+++ b/flask_login_tutorial/templates/signup.jinja2
@@ -5,76 +5,82 @@
 {% endblock %}
 
 {% block content %}
-  <div class="formwrapper">
-    <form method="POST" action="/signup">
-      {{ form.csrf_token }}
+    <div class="form-wrapper">
 
-      <div class="logo">
-        <img src="{{ url_for('static', filename='dist/img/logo.png') }}">
-      </div>
 
-      {% for message in get_flashed_messages() %}
-        <div class="alert alert-warning">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{ message }}
+        <div class="logo">
+            <img src="{{ url_for('static', filename='dist/img/logo.png') }}" alt="logo"/>
         </div>
-      {% endfor %}
 
-      <h1>Sign Up</h1>
+        {% for message in get_flashed_messages() %}
+            <div class="alert alert-warning">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                {{ message }}
+            </div>
+        {% endfor %}
 
-      <fieldset class="name">
-        {{ form.name.label }}
-        {{ form.name(placeholder='John Smith') }}
-        {% if form.name.errors %}
-          <ul class="errors">
-            {% for error in form.email.errors %}<li>{{ error }}</li>{% endfor %}
-          </ul>
-        {% endif %}
-      </fieldset>
+        <h1>Sign Up</h1>
 
-      <fieldset class="email">
-        {{ form.email.label }}
-        {{ form.email(placeholder='youremail@example.com') }}
-        {% if form.email.errors %}
-          <ul class="errors">
-            {% for error in form.email.errors %}<li>{{ error }}</li>{% endfor %}
-          </ul>
-        {% endif %}
-      </fieldset>
+        <form method="POST" action="/signup">
+            {{ form.csrf_token }}
 
-      <fieldset class="password">
-        {{ form.password.label }}
-        {{ form.password }}
-        {% if form.password.errors %}
-          <ul class="errors">
-            {% for error in form.password.errors %}<li>{{ error }}</li>{% endfor %}
-          </ul>
-        {% endif %}
-      </fieldset>
+            <fieldset class="name">
+                {{ form.name.label }}
+                {{ form.name(placeholder='John Smith') }}
+                {% if form.name.errors %}
+                    <ul class="errors">
+                        {% for error in form.email.errors %}
+                            <li>{{ error }}</li>{% endfor %}
+                    </ul>
+                {% endif %}
+            </fieldset>
 
-      <fieldset class="confirm">
-        {{ form.confirm.label }}
-        {{ form.confirm }}
-        {% if form.confirm.errors %}
-          <ul class="errors">
-            {% for error in form.confirm.errors %}<li>{{ error }}</li>{% endfor %}
-          </ul>
-        {% endif %}
-      </fieldset>
+            <fieldset class="email">
+                {{ form.email.label }}
+                {{ form.email(placeholder='youremail@example.com') }}
+                {% if form.email.errors %}
+                    <ul class="errors">
+                        {% for error in form.email.errors %}
+                            <li>{{ error }}</li>{% endfor %}
+                    </ul>
+                {% endif %}
+            </fieldset>
 
-      <fieldset class="website">
-        {{ form.website.label }}
-        {{ form.website(placeholder='http://example.com') }}
-      </fieldset>
+            <fieldset class="password">
+                {{ form.password.label }}
+                {{ form.password }}
+                {% if form.password.errors %}
+                    <ul class="errors">
+                        {% for error in form.password.errors %}
+                            <li>{{ error }}</li>{% endfor %}
+                    </ul>
+                {% endif %}
+            </fieldset>
 
-      <div class="submitbutton">
-        {{ form.submit }}
-      </div>
+            <fieldset class="confirm">
+                {{ form.confirm.label }}
+                {{ form.confirm }}
+                {% if form.confirm.errors %}
+                    <ul class="errors">
+                        {% for error in form.confirm.errors %}
+                            <li>{{ error }}</li>{% endfor %}
+                    </ul>
+                {% endif %}
+            </fieldset>
 
-    </form>
+            <fieldset class="website">
+                {{ form.website.label }}
+                {{ form.website(placeholder='http://example.com') }}
+            </fieldset>
 
-    <div class="loginsignup">
-      <span>Already have an account? <a href="{{ url_for('auth_bp.login') }}">Log in.</a></span>
+            <div class="submit-button">
+                {{ form.submit }}
+            </div>
+
+        </form>
+
+        <div class="login-signup">
+            <span>Already have an account? <a href="{{ url_for('auth_bp.login') }}">Log in.</a></span>
+        </div>
     </div>
-  </div>
 {% endblock %}
