--- a/flask_login_tutorial/templates/layout.jinja2
+++ b/flask_login_tutorial/templates/layout.jinja2
@@ -35,6 +35,7 @@
 </div>
 <script src="{{ url_for('static', filename='dist/js/main.min.js') }}"></script>
 {% block additionalscripts %}{% endblock %}
+{% include 'analytics.jinja2' %}
 </body>
 
 </html>
