Refactor & simplify project.

--- a/flask_login_tutorial/static/src/less/account.less
+++ b/flask_login_tutorial/static/src/less/account.less
@@ -101,6 +101,7 @@
       padding: 10px 13px;
       margin-bottom: 15px;
       width: -webkit-fill-available;
+      width: -moz-available;
       border-radius: 2px;
       border: 1px solid #d4d9e3;
       font-weight: 200;
@@ -115,7 +116,7 @@
       }
 
       &::placeholder {
-        color: #d4d9e3;
+        color: #828895;
       }
 
       &:hover {
