Added gunicorn dependency; adjusted outdated styles.

--- a/flask_login_tutorial/static/src/less/vars.less
+++ b/flask_login_tutorial/static/src/less/vars.less
@@ -1,5 +1,5 @@
 // Colors
-@theme-color: #5eb9d7;
+@theme-color: #0297f6;
 @background-color: #e1eaf5;
 @box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
 @header-color: #5f6988;
