--- a/flask_login_tutorial/static/src/less/account.less
+++ b/flask_login_tutorial/static/src/less/account.less
@@ -3,6 +3,10 @@
 .signup-page,
 .login-page {
   background: @background-color;
+  @media (max-width: 600px) {
+    width: 100%;
+    margin: 0;
+  }
 
   .form-wrapper {
     background: white;
@@ -13,8 +17,8 @@
     padding: 50px;
 
     @media (max-width: 600px) {
-      width: 100%;
-      margin: 15px auto;
+      width: auto;
+      margin: 0;
       padding: 30px;
     }
 
@@ -23,11 +27,11 @@
       margin: 0 auto 20px;
 
       img {
-        width: 30px;
+        width: 50px;
         margin: auto;
 
         @media (max-width: 600px) {
-          width: 25px;
+          width: 40px;
         }
       }
     }
