--- a/flask_login_tutorial/templates/layout.jinja2
+++ b/flask_login_tutorial/templates/layout.jinja2
@@ -8,7 +8,7 @@
   <meta name="HandheldFriendly" content="True"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
   <meta name="theme-color" content="#5eb9d7"/>
-  <link rel="shortcut icon" href="{{ url_for('static', filename='dist/img/favicon.png') }}" type="image/x-icon"/>
+  <link rel="shortcut icon" href="{{ url_for('static', filename='dist/img/favicon@2x.png') }}" type="image/x-icon"/>
   <meta property="og:site_name" content="Hackers and Slackers"/>
   <meta property="og:type" content="website"/>
   <meta property="og:title" content="Hackers and Slackers - Hackers and Slackers"/>
