--- a/flask_login_tutorial/templates/signup.jinja2
+++ b/flask_login_tutorial/templates/signup.jinja2
@@ -8,7 +8,7 @@
   <div class="form-wrapper">
 
     <div class="logo">
-      <img src="{{ url_for('static', filename='dist/img/logo.png') }}" alt="logo"/>
+      <img src="{{ url_for('static', filename='dist/img/logo@2x.png') }}" alt="logo"/>
     </div>
 
     {% for message in get_flashed_messages() %}
@@ -79,7 +79,7 @@
     </form>
 
     <div class="login-signup">
-      <span>Already have an account? <a href="{{ url_for('auth_bp.login') }}">Log in.</a></span>
+      <span>Already have an account? <a href="{{ url_for('auth_blueprint.login') }}">Log in.</a></span>
     </div>
   </div>
 {% endblock %}
