--- a/flask_login_tutorial/static/src/less/vars.less
+++ b/flask_login_tutorial/static/src/less/vars.less
@@ -4,6 +4,18 @@
 @box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
 @header-color: #5f6988;
 
+// Form Colors
+@input-field-border-color: #d4d9e3;
+@input-field-font-color: #4d5060;
+@input-field-hover-color: #d9f6ff;
+@input-field-placeholder-color: #d4d9e3;
+
+// Alert Colors
+@alert-warning-text-color: #856404;
+@alert-warning-bg-color: #fff3cd;
+@alert-warning-border-color: #ffeeba;
+
+
 // Fonts
 @body-font: 'Poppins', sans-serif;
 
