--- a/flask_login_tutorial/static/src/less/account.less
+++ b/flask_login_tutorial/static/src/less/account.less
@@ -38,7 +38,7 @@
       background-color: @alert-warning-bg-color;
       border-color: @alert-warning-border-color;
       font-weight: 300;
-      font-size: 1em;
+      font-size: .9em;
       margin: 30px 0;
       display: flex;
       align-items: center;
@@ -63,6 +63,7 @@
       border: 1px solid transparent;
       border-radius: .25rem;
       font-family: @body-font;
+      font-size: .9em;
 
       button.close {
         padding: 0;
