Add gunicorn support; bump Python to 3.12; bump dependencies.

--- a/flask_login_tutorial/static/src/less/account.less
+++ b/flask_login_tutorial/static/src/less/account.less
@@ -12,9 +12,9 @@
     background: white;
     width: 370px;
     max-width: 470px;
-    margin: 80px auto 0;
+    margin: 60px auto 0;
     box-shadow: @box-shadow;
-    padding: 50px;
+    padding: 40px;
 
     @media (max-width: 600px) {
       width: auto;
@@ -25,7 +25,7 @@
 
     .logo {
       text-align: center;
-      margin: 0 auto 20px;
+      margin: 0 auto 15px;
 
       img {
         width: 50px;
@@ -90,7 +90,7 @@
       font-weight: 300;
       border-bottom: 1px solid #dee2ef;
       padding-bottom: 5px;
-      margin-bottom: 20px;
+      margin: 15px auto;
       font-family: @body-font;
 
       @media (max-width: 600px) {
@@ -150,7 +150,7 @@
     label {
       font-size: .9em;
       color: @header-color;
-      margin-bottom: 5px;
+      margin-bottom: 3px;
       display: block;
       font-weight: 300;
       font-family: @body-font;
