--- a/flask_login_tutorial/static/src/less/account.less
+++ b/flask_login_tutorial/static/src/less/account.less
@@ -74,7 +74,7 @@
         font-size: 1.5rem;
         font-weight: 700;
         line-height: 1;
-        color: #000;
+        color: @alert-warning-text-color;
         text-shadow: 0 1px 0 #fff;
         opacity: .4;
 
