Implement `created_on` & `last_login` fields on `User` object.

--- a/flask_login_tutorial/static/src/less/account.less
+++ b/flask_login_tutorial/static/src/less/account.less
@@ -69,7 +69,7 @@
         padding: 0;
         background-color: transparent;
         border: 0;
-        -webkit-appearance: none;
+        appearance: none;
         float: right;
         font-size: 1.5rem;
         font-weight: 700;
